# cardiac_segmentation

./: .gitignore  CHANGELOG.md  README.md  dataset.py  pyproject.toml  requirements.txt  train_segmentation.py
data/: readme.txt
