[project]
name = "cardiac-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8.0",
    "nibabel>=5.3.2",
    "numpy==1.26.4",
    "pandas>=2.3.1",
    "segmentation-models-pytorch>=0.5.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm>=4.67.1",
]
